// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card should close if the title is clickedAgain 1`] = `
<div>
  <glamorous.Div
    onClick={[Function]}
  >
    <Component
      expanded={false}
    />
  </glamorous.Div>
  <glamorous(div)
    className="animated fadeIn"
    isVisible="none"
  >
    <div>
      Children
    </div>
  </glamorous(div)>
</div>
`;

exports[`Card should initally be closed 1`] = `
<div>
  <glamorous.Div
    onClick={[Function]}
  >
    <Component
      expanded={false}
    />
  </glamorous.Div>
  <glamorous(div)
    className="animated fadeIn"
    isVisible="none"
  >
    <div>
      Children
    </div>
  </glamorous(div)>
</div>
`;

exports[`Card should open once the title is clicked 1`] = `
<div>
  <glamorous.Div
    onClick={[Function]}
  >
    <Component
      expanded={true}
    />
  </glamorous.Div>
  <glamorous(div)
    className="animated fadeIn"
    isVisible="block"
  >
    <div>
      Children
    </div>
  </glamorous(div)>
</div>
`;
